# gb-os

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Technical_Documentation.md  build.bat  build.sh  docker-build.sh  docker-entrypoint.sh  floppy-writer.ps1  i686-rustacean.json  rust-toolchain.toml
.cargo/: config.toml
boot/: boot.asm  stage2.asm  vbr.asm
boot/uefi/: Cargo.toml  README.md  build.sh  startup.nsh  x86_64-uefi.json
boot/uefi/src/: console.rs  fs.rs  graphics.rs  main.rs  memory.rs
boot/uefi/src/uefi/: mod.rs  protocols.rs  tables.rs  types.rs
kernel/: Cargo.toml  linker.ld
kernel-pi/src/: main.rs
kernel/src/: .dockerignore  Cargo.toml  Dockerfile  boot_info.rs  build-pi-zero2.sh  build.sh  defensive.rs  docker-build.sh  lib.rs  main.rs  rom_browser.rs  rust-toolchain.toml
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: Cargo.toml
kernel/src/arch/aarch64/src/: cpu.rs  exceptions.rs  lib.rs  mmu.rs
kernel/src/arch/armv6m/: Cargo.toml
kernel/src/arch/armv6m/src/: lib.rs
kernel/src/arch/x86/: idt.rs  pic.rs  pit.rs
kernel/src/bootcore/: Cargo.toml
kernel/src/bootcore/src/: boot_info.rs  fmt.rs  lib.rs  panic.rs  traits.rs
kernel/src/drivers/: armada_e500_hw.rs  ata.rs  ati_rage.rs  ide_piix4m.rs  init.rs  keyboard.rs  mod.rs  synaptics.rs
kernel/src/fs/: fat16.rs  mod.rs
kernel/src/gameboy/: cpu.rs  device.rs  display.rs  display_double_buffer.rs  gbmode.rs  gpu.rs  input.rs  keypad.rs  mmu.rs  mod.rs  register.rs  serial.rs  timer.rs
kernel/src/gameboy/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
kernel/src/graphics/: double_buffer.rs  mod.rs  vga_mode13h.rs  vga_palette.rs
kernel/src/gui/: desktop.rs  font_4x6.rs  font_8x8.rs  framebuffer.rs  layout.rs  mod.rs
kernel/src/overlay/: catch_rate.rs  dirty_region.rs  game_overlay.rs  item_names.rs  map_names.rs  mod.rs  move_names.rs  move_pp.rs  pokemon_names.rs  ram_layout.rs
kernel/src/platform/kickpi-k2b/: Cargo.toml  linker.ld
kernel/src/platform/kickpi-k2b/src/: main.rs
kernel/src/platform/pi-zero2/: Cargo.toml  config.txt  linker.ld  readme.md
kernel/src/platform/pi-zero2/src/: dpi.rs  emulator.rs  entry.rs  fallback.rs  framebuffer.rs  gpi_input.rs  gpio.rs  hal_impl.rs  input.rs  mailbox.rs  main.rs  memory_map.rs  mmio.rs  multicore.rs  timer.rs  uart.rs  usb_host.rs  usb_input.rs
kernel/src/platform/pi-zero2/src/drivers/: dpi.rs  emmc.rs  gpio.rs  mod.rs  timer.rs
kernel/src/platform/pi-zero2/src/hal/: display.rs  input.rs  mod.rs  storage.rs  timer.rs
kernel/src/platform/pi5/: Cargo.toml  linker.ld
kernel/src/platform/pi5/src/: main.rs
kernel/src/platform/rp2040/: Cargo.toml  linker.ld
kernel/src/platform/rp2040/src/: boot2.rs  main.rs
kernel/src/storage/: ata.rs  fat32.rs  mod.rs  pci.rs  savefile.rs
kernel/src/ui/: mod.rs  rom_menu.rs
kernel/src/xtask/: Cargo.toml
kernel/src/xtask/src/: main.rs
src/gameboy/: MEMORY_ALLOCATION.md  audio.rs  cartridge.rs  cpu.rs  gbmode.rs  gpu.rs  keypad.rs  lib.rs  magic_numbers.md  mmu.rs  readme.md  register.rs  serial.rs  sound.rs  timer.rs
src/platform/rpi-zero2/: README.md  boot.S  lib.rs  linker.ld  main.rs
src/platform/rpi-zero2/display/: console.rs  framebuffer.rs  mod.rs  splash_screen.rs
src/platform/rpi-zero2/drivers/: mod.rs  sdhost.rs  usb.rs
src/platform/rpi-zero2/hal/: gpio.rs  mailbox.rs  mod.rs
src/platform/rpi-zero2/platform_core/: allocator.rs  cpu.rs  mmio.rs  mmu.rs  mod.rs
src/platform/rpi-zero2/subsystems/: fat32.rs  input.rs  mod.rs
src/rom_selector/: menu.rs  mod.rs
tools/mkgamedisk/: Cargo.toml
tools/mkgamedisk/src/: main.rs
