[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["GB-OS Contributors"]
description = "GB-OS Kernel - x86 Game Boy Emulator OS"

# Library target - exports shared modules for other platforms
[lib]
name = "kernel"
path = "src/lib.rs"

# Binary target - the x86 kernel
[[bin]]
name = "kernel"
path = "main.rs"

[dependencies]
# Add any dependencies the kernel needs here

[features]
default = []
