[package]
name = "rustboot-kickpi-k2b"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KickPi K2B (Allwinner H618) bootloader"

[[bin]]
name = "boot0"
path = "src/main.rs"

[dependencies]
bootcore = { workspace = true }
# Use direct path and disable default-entry since we have our own eGON header entry point
arch-aarch64 = { path = "../../arch/aarch64", default-features = false }

[features]
default = []
