[package]
name = "rustboot-kickpi-k2b"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KickPi K2B bootloader"

[[bin]]
name = "boot0"
path = "src/main.rs"

[dependencies]
bootcore = { workspace = true }
arch-aarch64 = { workspace = true }
