[package]
name = "rustboot-pi5"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Raspberry Pi 5 bootloader"

[[bin]]
name = "kernel8"
path = "src/main.rs"

[dependencies]
bootcore = { workspace = true }
arch-aarch64 = { workspace = true }

[features]
default = []
